--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fekey-command-init",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "scaffold for fekey",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,6 @@
   "dependencies": {
     "bluebird": "2.9.21",
     "findup": "0.1.5",
-    "fis-scaffold-kernel": "~0.1.1"
+    "fis-scaffold-kernel": ""
   }
 }
